# rust-react-full-template

./: README.md
frontend/: package-lock.json  package.json
frontend/config/: routes.ts
frontend/src-tauri/: tauri.conf.json
frontend/src/locales/zh-CN/: menu.ts
frontend/src/pages/: Admin.tsx
frontend/src/pages/Users/: index.tsx
mobile/: package-lock.json
server/: Cargo.toml  config.toml
server/application/: Cargo.toml
server/command/: Cargo.toml
server/command/src/: launcher.rs  main.rs
server/command/src/config/: conf.rs  mod.rs
server/configs/: Cargo.toml
server/db/: Cargo.toml
server/infrastructure/: Cargo.toml
server/presentation/: Cargo.toml
server/tools/: Cargo.toml
