[package]
name = "command"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4.5.36", features = ["derive","cargo"] }
axum = "0.8.3"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
tokio = { version = "1.44.2", features = ["full"] }
jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
listenfd = "1.0.1"
once_cell = "1"
toml = "0"